@startuml
scale 1

' Classes

class LearningModel {
    +learn()
    +choose_action()
    +predict()
}

class DQNKeras {
    +learn()
    +choose_action()
    +predict()
    +memorize()
}

class DqlTensorFlow {
    +learn()
    +choose_action()
    +predict()
    +memorize()
}

class DQNPytorch {
    +learn()
    +choose_action()
    +predict()
    +memorize()
}

' Notes

note "Various redundant implementations of the same base algorithm (Deep-Q Learning) for each different ML Library.\n\n1.0 Architecture unifies the DQL algorithm in a single file and makes calls to ML Lirbaries in a generic fashion." as N1


' Relations

LearningModel <|-- DQNKeras
LearningModel <|-- DqlTensorFlow
LearningModel <|-- DQNPytorch

N1 -up- DqlTensorFlow
N1 -up- DQNKeras
N1 -up- DQNPytorch

@enduml
